<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_library"
            android:icon="@drawable/ic_sidebar_books"
            android:title="@string/library" />
        <item
            android:id="@+id/drawer_bookmarks"
            android:icon="@drawable/ic_menu_bookmarks_star"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/drawer_tags"
            android:icon="@drawable/ic_tag_outline"
            android:title="@string/menu_tags"/>
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/drawer_highlights"
                android:icon="@drawable/ic_sidebar_eye"
                android:title="@string/menu_highlights"
                app:actionLayout="@layout/item_drawer_highlights_switch" />
            <item
                android:id="@+id/drawer_night_mode"
                android:icon="@drawable/ic_sidebar_dark_mode"
                android:title="@string/menu_night_mode"
                app:actionLayout="@layout/item_drawer_night_mode_switch" />
            <item
                android:id="@+id/drawer_find_in_page"
                android:icon="@drawable/ic_sidebar_find_in_page"
                android:title="@string/menu_find_in_page"
                app:actionLayout="@layout/item_drawer_find_in_page_switch" />
            <item
                android:id="@+id/drawer_settings"
                android:icon="@drawable/ic_sidebar_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/drawer_help"
                android:icon="@drawable/ic_sidebar_help"
                android:title="@string/menu_help" />
            <!--<item
                android:id="@+id/drawer_donate"
                android:icon="@drawable/ic_menu_donate"
                android:title="@string/donate"/>-->
            <item
                android:id="@+id/drawer_about"
                android:icon="@drawable/ic_sidebar_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
