<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bar_find_in_page"
        android:icon="@drawable/ic_action_find_in_page"
        android:orderInCategory="-1"
        android:title="@string/menu_find_in_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bar_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="0"
        android:title="@string/menu_search"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_bar_history"
        android:icon="@drawable/ic_action_history"
        android:orderInCategory="1"
        android:title="@string/menu_history"
        app:showAsAction="ifRoom|withText"/>
</menu>
